# neolib

./: .gitignore  CMakeLists.txt  LICENSE  README  README.md  ReadMe.txt  algorithm.hpp  any_predicate.hpp  any_ref.hpp  application_info.hpp  array_tree.hpp  async_slot.hpp  binary_data_packet.hpp  binary_packet.hpp  building.txt  container_iterator.hpp  event.cpp  event.hpp  file.cpp  functional.hpp  gunzip.cpp  gunzip.hpp  hexdump.hpp  i_application.hpp  i_discoverable.hpp  i_iterator.hpp  i_list.hpp  i_map.hpp  i_optional.hpp  i_packet.hpp  i_pair.hpp  i_plugin.hpp  i_reference_counted.hpp  i_sequence_container.hpp  i_set.hpp  i_setting.hpp  i_simple_variant.hpp  i_string.hpp  i_version.hpp  interlockable.hpp  (+44 more)
include/: async_signal.hpp  container_helper.hpp  crc.hpp  cstdint.hpp  data_packet.hpp  file.hpp  generic_iterator.hpp  http.hpp  i_plugin_manager.hpp  list.hpp  map.hpp  packet_connection.hpp  refable.hpp  segmented_array.hpp  tag_array.hpp  tree.hpp  type_traits.hpp  variant.hpp
include/neolib/: align.hpp  allocator.hpp  any.hpp  any_iterator.hpp  any_predicate.hpp  any_ref.hpp  application.hpp  application_info.hpp  array_tree.hpp  async_signal.hpp  async_slot.hpp  async_task.hpp  async_thread.hpp  binary_data_packet.hpp  binary_packet.hpp  bresenham_counter.hpp  callable.hpp  container_helper.hpp  container_iterator.hpp  cookie_jar.hpp  crc.hpp  custom_type.hpp  data_packet.hpp  destroyable.hpp  detail_algorithm.hpp  detail_memory.hpp  enum.hpp  event.hpp  fast_hash.hpp  fast_vector.hpp  file.hpp  functional.hpp  fwd_abstract.hpp  generic_iterator.hpp  gunzip.hpp  hexdump.hpp  http.hpp  i_application.hpp  i_application_info.hpp  i_async_task.hpp  (+125 more)
include/neolib/app/: application.hpp  application_info.hpp  i_application.hpp  i_application_info.hpp  i_logger.hpp  i_module_services.hpp  i_object.hpp  i_power.hpp  i_setting.hpp  i_setting_constraints.hpp  i_setting_value.hpp  i_settings.hpp  i_shared_thread_local.hpp  i_version.hpp  logger.hpp  module.hpp  object.hpp  os_version.hpp  ostream_logger.hpp  power.hpp  services.hpp  setting.hpp  setting_constraints.hpp  setting_value.hpp  settings.hpp  shared_thread_local.hpp  time.hpp  version.hpp
include/neolib/chrono/: fast_clock.hpp  tsc_clock.hpp
include/neolib/core/: allocator.hpp  any.hpp  any_iterator.hpp  any_predicate.hpp  any_ref.hpp  container_iterator.hpp  crc.hpp  custom_type.hpp  deque.hpp  dirty_list.hpp  easing.hpp  enum.hpp  fast_hash.hpp  fast_vector.hpp  fwd_abstract.hpp  gap_vector.hpp  generic_iterator.hpp  hive.hpp  i_any.hpp  i_container.hpp  i_contiguous_random_access_container.hpp  i_custom_type.hpp  i_custom_type_factory.hpp  i_deque.hpp  i_discoverable.hpp  i_enum.hpp  i_iterator.hpp  i_jar.hpp  i_lifetime.hpp  i_list.hpp  i_map.hpp  i_mutex.hpp  i_optional.hpp  i_pair.hpp  i_random_access_container.hpp  i_reference_counted.hpp  i_sequence_container.hpp  i_service.hpp  i_set.hpp  i_simple_variant.hpp  (+55 more)
include/neolib/core/win32/: win32.hpp
include/neolib/ecs/: chrono.hpp  clock.hpp  component.hpp  ecs.hpp  ecs_ids.hpp  entity.hpp  entity_archetype.hpp  entity_info.hpp  entity_life_span.hpp  i_component.hpp  i_component_data.hpp  i_ecs.hpp  i_entity_archetype.hpp  i_system.hpp  system.hpp  time.hpp
include/neolib/file/: file.hpp  gunzip.hpp  hexdump.hpp  json.hpp  json.inl  lexer.hpp  parser.hpp  xml.hpp  xml.inl  zip.hpp
include/neolib/io/: binary_data_packet.hpp  binary_packet.hpp  data_packet.hpp  http.hpp  i_packet.hpp  oauth.hpp  openssl.hpp  packet_connection.hpp  packet_stream.hpp  resolver.hpp  string_packet.hpp  tcp_packet_stream_server.hpp  tld_packet.hpp  uri.hpp
include/neolib/plugin/: i_plugin.hpp  i_plugin_event.hpp  i_plugin_manager.hpp  i_plugin_variant.hpp  plugin.hpp  plugin_event.hpp  plugin_manager.hpp  plugin_variant.hpp  simple_variant.hpp
include/neolib/task/: async_task.hpp  async_thread.hpp  event.hpp  i_async_task.hpp  i_event.hpp  i_task.hpp  i_thread.hpp  i_timer_object.hpp  task.hpp  thread.hpp  thread_pool.hpp  time_slice.hpp  timer.hpp  timer_object.hpp  waitable_event.hpp
include/neolib/vm/: bytecode_cpu.hpp  i_cpu.hpp  i_machine.hpp  i_scheduler.hpp  i_thread.hpp  machine.hpp  scheduler.hpp
src/: application_info.cpp  async_task.cpp  async_thread.cpp  crc.cpp  event.cpp  fast_hash.cpp  file.cpp  gunzip.cpp  http.cpp  io_task.cpp  io_thread.cpp  module.cpp  oauth.cpp  openssl.cpp  os_version.cpp  plugin_manager.cpp  setting.cpp  thread.cpp  thread_pool.cpp  timer.cpp  uri.cpp  uuid.cpp  waitable_event.cpp  zip.cpp
src/app/: application_info.cpp  module.cpp  os_version.cpp  power.cpp  services.cpp  setting.cpp  settings.cpp  shared_thread_local.cpp
src/core/: crc.cpp  lifetime.cpp  module.cpp  mutex.cpp  reference_counted.cpp  service.cpp  string_utils.cpp  uuid.cpp
src/ecs/: ecs.cpp  entity.cpp  entity_archetype.cpp  system.cpp  time.cpp
src/file/: file.cpp  gunzip.cpp  zip.cpp
src/io/: http.cpp  oauth.cpp  openssl.cpp  uri.cpp
src/plugin/: plugin_manager.cpp
src/posix/: posix_module.cpp
src/posix/app/: posix_module.cpp  posix_module.hpp
src/task/: async_task.cpp  async_thread.cpp  event.cpp  thread.cpp  thread_pool.cpp  time_slice.cpp  timer.cpp  timer_object.cpp  waitable_event.cpp
src/win32/: win32_message_queue.cpp  win32_module.cpp
src/win32/app/: win32_module.cpp  win32_module.hpp
src/win32/core/: win32.cpp
src/win32/task/: win32_message_queue.cpp  win32_message_queue.hpp
todo/: xml.h  xml_bits.h
unit_tests/: CMakeLists.txt  threadpool.cpp
unit_tests/App/src/: App.cpp  Time.cpp
unit_tests/Chrono/: Chrono.cpp
unit_tests/Containers/: Containers.cpp  Containers.sln  Containers.vcxproj  Containers.vcxproj.filters  Tree.cpp
unit_tests/Event/src/: Event.cpp
unit_tests/File/: File.cpp
unit_tests/Io/: Io.cpp
unit_tests/Logger/: Logger.cpp
unit_tests/NoFussJSON/src/: NoFussJSONTest.cpp
unit_tests/Numerical/: Numerical.cpp
unit_tests/StringUtils/src/: StringUtils.cpp
unit_tests/Task/: Task.cpp
